# ColdVox

./: .actionlint.yaml  .clippy.toml  .coderabbit.yaml  .env.example  .envrc  .git_acl.txt  .gitattributes  .gitignore  .lintstagedrc.json  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .tool-versions  .yamllint.yaml  @coldvox_stt_synthesis.md  AGENTS.md  ASYNC_STT_SUMMARY.md  CANDLE_WHISPER_REVIEW_SUMMARY.md  CHANGELOG.md  CItesting0907.md  CLAUDE.md  COLDVOX_TESTING_INFRA_DESIGN.md  CONTRIBUTING.md  Cargo.toml  ColdVox_Test_Suite_Redesign_Plan.md  DEPENDENCY_AUDIT_ISSUE.md  DEPENDENCY_MIGRATION_REPORT.md  DOCS_ANALYSIS_README.md  FINAL_REPORT.md  FinalPlan.md  GEMINI.md  ISSUE_159_TEMPLATE.md  Makefile  NEXT_STEPS.md  PLAN.md  PR152_FINALIZATION_REPORT.md  PR_123_REVIEW.md  PR_DESCRIPTION.md  PYO3_DEPENDENCY_AUDIT_PLAN.md  (+79 more)
crates/app/: CHANGELOG.md  Cargo.toml  REFACTOR_PLAN.md  build.rs  plugins.json  test_vad
crates/app/benches/: text_chunking_bench.rs
crates/app/config/: default.toml  plugins.json
crates/app/docs/: updated_architecture_diagram.md
crates/app/src/: lib.rs  main.rs  runtime.rs  sleep_instrumentation.rs  test_utils.rs  tui.rs
crates/app/src/stt/: mod.rs  (+8 more)
crates/app/test_data/: README.md  pipeline_test.txt  test_1.txt  test_10.txt  test_11.txt  test_12.txt  test_2.txt  test_3.txt  test_4.txt  test_5.txt  test_6.txt  test_7.txt  test_8.txt  test_9.txt
crates/app/tests/: chunker_timing_tests.rs  golden_master.rs  hardware_check.rs  headless_pipeline.rs  http_remote_wiring_live.rs  pipeline_integration.rs  settings_test.rs  tui_dashboard_manual_test.rs  tui_dashboard_test.rs  vad_pipeline_tests.rs  verify_mock_injection_fix.rs
crates/coldvox-app/: Cargo.toml
crates/coldvox-audio/: CHANGELOG.md  Cargo.toml  README.md  plugins.json
crates/coldvox-audio-quality/: Cargo.toml  README.md
crates/coldvox-audio-quality/benches/: audio_quality_benchmarks.rs
crates/coldvox-audio-quality/src/: config.rs  level.rs  lib.rs  spectral.rs  types.rs
crates/coldvox-audio-quality/test_data/: README.md
crates/coldvox-audio-quality/tests/: integration_test.rs
crates/coldvox-audio/docs/: design-pipewire.md  design-user-config.md
crates/coldvox-audio/examples/: live_capture.rs
crates/coldvox-audio/src/: capture.rs  chunker.rs  constants.rs  detector.rs  device.rs  frame_reader.rs  lib.rs  monitor.rs  resampler.rs  ring_buffer.rs  stderr_suppressor.rs  watchdog.rs
crates/coldvox-audio/tests/: audio_capture_pipeline_tests.rs  default_mic_detection_it.rs  device_hotplug_tests.rs  live_audio_capture_test.rs  watchdog_tests.rs  windows_live_capture_test.rs  windows_live_mic_test.rs
crates/coldvox-foundation/: CHANGELOG.md  Cargo.toml  README.md
crates/coldvox-foundation/src/: clock.rs  env.rs  error.rs  health.rs  lib.rs  shutdown.rs  state.rs  test_env.rs
crates/coldvox-foundation/tests/: foundation_tests.rs
crates/coldvox-gui/: CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html  justfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
crates/coldvox-gui/docs/: architecture.md  bridge.md  components.md  design.md  implementation-plan.md  tasks.md
crates/coldvox-gui/qml/: ActivePanel.qml  ActivityIndicator.qml  AppRoot.qml  CollapsedBar.qml  ControlsBar.qml  Main.qml  SettingsWindow.qml
crates/coldvox-gui/src/: App.tsx  bridge.rs  gui_service_impl.rs  main.rs  service.rs  service_registry.rs  styles.css
crates/coldvox-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/coldvox-stt/: CHANGELOG.md  Cargo.toml  PAIN_POINTS_AND_FIXES.md  README.md
crates/coldvox-stt-vosk/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/coldvox-stt-vosk/src/: lib.rs  model.rs  plugin.rs  types.rs  vosk_transcriber.rs
crates/coldvox-stt-whisper/: Cargo.toml
crates/coldvox-stt-whisper/src/: lib.rs
crates/coldvox-stt-whisper/tests/: streaming_test.rs
crates/coldvox-stt/examples/: verify_moonshine.rs
crates/coldvox-stt/src/: common.rs  constants.rs  helpers.rs  lib.rs  plugin.rs  plugin_adapter.rs  plugin_types.rs  processor.rs  streaming_processor.rs  types.rs  validation.rs
crates/coldvox-stt/tests/: candle_whisper_integration.rs  http_remote_live.rs  moonshine_e2e.rs  stt_comprehensive_tests.rs
crates/coldvox-telemetry/: CHANGELOG.md  Cargo.toml  README.md
crates/coldvox-telemetry/examples/: demo.rs  integration_example.rs
crates/coldvox-telemetry/src/: integration.rs  lib.rs  metrics.rs  mod.rs  pipeline_metrics.rs  stt_metrics.rs
crates/coldvox-text-injection/: CHANGELOG.md  Cargo.toml  README.md  TESTING.md  build.rs  run_tests.sh
crates/coldvox-text-injection/examples/: injection_diagnostics.rs  test_enigo_live.rs  test_orchestrator.rs
crates/coldvox-text-injection/src/: atspi_injector.rs  backend.rs  backend_plan.rs  clipboard_injector.rs  clipboard_paste_injector.rs  combo_clip_atspi.rs  combo_clip_ydotool.rs  compat.rs  config_timeout.rs  confirm.rs  constants.rs  detection.rs  enigo_injector.rs  error.rs  focus.rs  kdotool_injector.rs  lib.rs  log_throttle.rs  logging.rs  manager.rs  metrics.rs  mki_injector.rs  noop_injector.rs  orchestrator.rs  outcome.rs  prewarm.rs  probe.rs  processor.rs  session.rs  subprocess.rs  types.rs  window_manager.rs  ydotool_injector.rs
crates/coldvox-text-injection/test-apps/: gtk_test_app.c  text-capture-app.c
crates/coldvox-text-injection/tests/: kdotool_integration_test.rs  text_injection_pipeline_tests.rs
crates/coldvox-tts/: Cargo.toml  README.md
crates/coldvox-tts-espeak/: Cargo.toml  README.md
crates/coldvox-vad/: CHANGELOG.md  Cargo.toml
crates/coldvox-vad-silero/: CHANGELOG.md  Cargo.toml
examples/: Cargo.toml  async_stt_demo.rs  device_hotplug_demo.rs  foundation_probe.rs  inject_demo.rs  record_10s.rs  stt_performance_metrics_demo.rs  synthetic_stt.rs  test_hotkey_backend.rs  test_kglobalaccel_hotkey.rs  test_silero_minimal.rs  test_silero_wav.rs  text_injection_demo.rs  text_injection_probe.rs  tts_integration_example.rs  tts_synthesis_example.rs  vad_demo.rs  vosk_test.rs  vosk_test.rs.backup
(+1119 files in other folders)
