[workspace]
members = [
    "crates/app",
    "crates/coldvox-foundation",
    "crates/coldvox-telemetry",
    "crates/coldvox-audio",
    "crates/coldvox-audio-quality",
    "crates/coldvox-vad",
    "crates/coldvox-vad-silero",
    "crates/coldvox-text-injection",
    "crates/coldvox-stt",
    "crates/coldvox-gui",
]

exclude = ["examples"]
resolver = "2"
