[package]
name = "coldvox-app"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "coldvox_app"
path = "src/lib.rs"

[[bin]]
name = "coldvox"
path = "src/main.rs"

[[bin]]
name = "tui_dashboard"
path = "src/bin/tui_dashboard.rs"

[[bin]]
name = "mic_probe"
path = "src/bin/mic_probe.rs"


[dependencies]
zbus = { version = "5.12.0" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
parking_lot = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
async-trait = "0.1"
hound = "3.5"
rubato = "1.0"
crossbeam-channel = "0.5"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.30"
crossterm = "0.29"
futures = "0.3"
fastrand = "2.0"
coldvox-foundation = { path = "../coldvox-foundation" }
coldvox-telemetry = { path = "../coldvox-telemetry" }
coldvox-audio = { path = "../coldvox-audio" }
coldvox-vad = { path = "../coldvox-vad" }
coldvox-vad-silero = { path = "../coldvox-vad-silero", features = ["silero"] }
coldvox-stt = { path = "../coldvox-stt" }
csv = "1.3"
cpal = "0.17.3"
config = { version = "0.15", features = ["toml"] }

[dev-dependencies]
tempfile = "3.26"
mockall = "0.14"
tokio-test = "0.4"
ctrlc = "3.5"
proptest = "1.10"
rand = "0.10"
serial_test = "3.4"
similar-asserts = "1.5"

[features]
default = ["silero", "text-injection"]
# STT Backends (see docs/domains/stt/stt-overview.md)
moonshine = ["coldvox-stt/moonshine"]      # ✅ Working: Python-based, CPU/GPU
parakeet = ["coldvox-stt/parakeet"]        # ⚠️ Planned: Not currently functional
# Other features
silero = ["coldvox-vad-silero/silero"]     # ✅ Default: Silero VAD
text-injection = ["dep:coldvox-text-injection"]  # ✅ Default: Text injection backends
live-hardware-tests = []
examples = []
sleep-observer = []
tui = []

text-injection-atspi = ["text-injection", "coldvox-text-injection/atspi"]
text-injection-clipboard = ["text-injection", "coldvox-text-injection/wl_clipboard"]
text-injection-ydotool = ["text-injection", "coldvox-text-injection/ydotool"]
text-injection-enigo = ["text-injection", "coldvox-text-injection/enigo"]

text-injection-kdotool = ["text-injection", "coldvox-text-injection/kdotool"]
text-injection-regex = ["text-injection", "coldvox-text-injection/regex"]

# Platform-specific dependencies for Linux
[target.'cfg(target_os = "linux")'.dependencies]
coldvox-text-injection = { path = "../coldvox-text-injection", features = ["atspi", "wl_clipboard", "ydotool"], optional = true }

# Platform-specific dependencies for Windows
[target.'cfg(target_os = "windows")'.dependencies]
coldvox-text-injection = { path = "../coldvox-text-injection", features = ["enigo"], optional = true }

# Platform-specific dependencies for macOS
[target.'cfg(target_os = "macos")'.dependencies]
coldvox-text-injection = { path = "../coldvox-text-injection", features = ["enigo"], optional = true }
