[dependencies]
coldvox-foundation = { path = "../coldvox-foundation", features = ["telemetry"] }
coldvox-audio = { path = "../coldvox-audio", features = ["telemetry"] }
coldvox-vad = { path = "../coldvox-vad" }
coldvox-vad-silero = { path = "../coldvox-vad-silero", optional = true }
coldvox-stt = { path = "../coldvox-stt", features = ["telemetry"] }
coldvox-text-injection = { path = "../coldvox-text-injection", features = ["telemetry"] }
coldvox-telemetry = { path = "../coldvox-telemetry", optional = true }
coldvox-gui = { path = "../coldvox-gui", optional = true }
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0"
futures = "0.3"
ratatui = { version = "0.26", features = ["crossterm"] }
crossterm = "0.27"
tui-textarea = "0.3"
anyhow = "1.0"

[features]
default = ["vosk", "gui", "telemetry"]
vosk = ["coldvox-stt/vosk"]
parakeet = ["coldvox-stt/parakeet"]
whisper = ["coldvox-stt/whisper"]
coqui = ["coldvox-stt/coqui"]
leopard = ["coldvox-stt/leopard"]
silero-stt = ["coldvox-stt/silero-stt"]
silero-vad = ["coldvox-vad-silero"]
gui = ["dep:coldvox-gui"]
telemetry = ["dep:coldvox-telemetry", "coldvox-foundation/telemetry", "coldvox-audio/telemetry", "coldvox-stt/telemetry", "coldvox-text-injection/telemetry"]