[package]
name = "coldvox-audio"
version = "0.1.0"
edition = "2021"
description = "Audio capture, processing, and device management for ColdVox"
authors = ["ColdVox Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
coldvox-foundation = { path = "../coldvox-foundation" }
coldvox-telemetry = { path = "../coldvox-telemetry" }
cpal = { workspace = true }
rtrb = "0.3"
dasp = { version = "0.11", features = ["all"] }
rubato = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = []