[package]
name = "coldvox-audio"
version = "0.1.0"
edition = "2021"
description = "Audio capture, processing, and device management for ColdVox"
authors = ["ColdVox Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
coldvox-foundation = { path = "../coldvox-foundation" }
coldvox-telemetry = { path = "../coldvox-telemetry" }
cpal = "0.17"
rtrb = "0.3"
dasp = { version = "0.11", features = ["all"] }
rubato = "0.16"
parking_lot = "0.12"
tokio = { version = "1.35", features = ["sync", "rt"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"
libc = "0.2.176"

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
