[package]
name = "coldvox-foundation"
version = "0.1.0"
edition = "2021"
description = "Foundation types, errors, and core functionality for ColdVox"
authors = ["ColdVox Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "signal"] }
tracing = { workspace = true }
cpal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }
crossbeam-channel = { workspace = true }

[features]
default = []