[package]
name = "coldvox-foundation"
version = "0.1.0"
edition = "2021"
description = "Foundation types, errors, and core functionality for ColdVox"
authors = ["ColdVox Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "2.0"
tokio = { version = "1.49", features = ["sync", "time", "rt", "signal"] }
tracing = "0.1"
cpal = "0.17"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
config = { version = "0.15", features = ["toml"] }

[features]
default = []

[dev-dependencies]
serial_test = "3.3"
