[package]
name = "coldvox-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
build = "build.rs"

[features]
# Keep the feature you referenced. It just forwards to cxx-qt-lib's full feature set.
default = ["qt-ui"]
qt-ui = ["cxx-qt-lib/full"]

[dependencies]
# CXX-Qt runtime and Qt bindings
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["full"] }

# Optional: logging while debugging
log = "0.4"

[build-dependencies]
# The ONLY build helper you need. Do NOT include `cxx-build`.
cxx-qt-build = "0.7"

[profile.release]
lto = "thin"

[profile.dev]
debug = 1
