[package]
name = "coldvox-stt-vosk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
vosk = { version = "0.3", features = ["batch"] }
coldvox-stt = { path = "../coldvox-stt" }
async-trait = "0.1"
zip = "0.6"
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
vosk = []
