[package]
name = "coldvox-stt"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text abstraction layer for ColdVox"

[dependencies]
tokio = { version = "1.35", features = ["sync", "macros", "time"] }
tracing = "0.1"
parking_lot = "0.12"
async-trait = "0.1"
thiserror = "2.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
coldvox-foundation = { path = "../coldvox-foundation" }
coldvox-telemetry = { path = "../coldvox-telemetry" }
## Removed Python-dependent faster-whisper backend; will replace with pure Rust implementation

# Parakeet STT via pure Rust ONNX Runtime
parakeet-rs = { version = "0.2", optional = true }

# Moonshine STT via PyO3/HuggingFace
pyo3 = { version = "0.24.1", optional = true, features = ["auto-initialize"] }
tempfile = { version = "3.8", optional = true }
hound = { version = "3.5", optional = true }

[features]
default = []
parakeet = ["dep:parakeet-rs"]
whisper = [] # Placeholder until new backend is implemented
moonshine = ["dep:pyo3", "dep:tempfile", "dep:hound"]
coqui = []
leopard = []
silero-stt = []
