[package]
name = "coldvox-stt"
version = "0.1.0"
edition = "2021"
description = "Speech-to-text abstraction layer for ColdVox"
publish = false

[dependencies]
tokio = { version = "1.49", features = ["sync", "macros", "time"] }
tracing = "0.1"
parking_lot = "0.12"
async-trait = "0.1"
thiserror = "2.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
coldvox-foundation = { path = "../coldvox-foundation" }
coldvox-telemetry = { path = "../coldvox-telemetry" }
## Removed Python-dependent faster-whisper backend; will replace with pure Rust implementation

# Parakeet STT via pure Rust ONNX Runtime
parakeet-rs = { version = "0.2", optional = true }

# Moonshine STT via PyO3/HuggingFace - Fixed auto-initialize
pyo3 = { version = "0.28", optional = true, features = ["auto-initialize"] }
tempfile = { version = "3.8", optional = true }
hound = { version = "3.5", optional = true }

[features]
default = []
parakeet = ["dep:parakeet-rs"]
parakeet-cuda = ["parakeet", "parakeet-rs/cuda"]
parakeet-tensorrt = ["parakeet-cuda", "parakeet-rs/tensorrt"]
whisper = [] # Placeholder until new backend is implemented
moonshine = ["dep:pyo3", "dep:tempfile", "dep:hound"]
coqui = []
leopard = []
silero-stt = []

[dev-dependencies]
tokio = { version = "1.49", features = ["rt-multi-thread", "macros"] }
serial_test = "3.3"
hound = "3.5"

# Gate moonshine example behind feature flag
[[example]]
name = "verify_moonshine"
required-features = ["moonshine"]
