[package]
name = "coldvox-text-injection"
version = "0.1.0"
edition = "2021"
description = "Text injection backends and session management for ColdVox"
license = "MIT OR Apache-2.0"
keywords = ["accessibility", "automation", "text-injection", "atspi", "clipboard"]
categories = ["accessibility", "gui"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
coldvox-stt = { path = "../coldvox-stt" }

# Backend dependencies (all optional)
atspi = { version = "0.28", optional = true }
wl-clipboard-rs = { version = "0.8", optional = true }  
enigo = { version = "0.2", optional = true }
# device_query = { version = "4.0", optional = true } # Removed: unused dependency

# Additional backend dependencies used by injectors
x11 = { version = "2.21", optional = true }
arboard = { version = "3.2", optional = true }
mouse-keyboard-input = { version = "0.7", optional = true }
regex = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }

[features]
default = []

# Backend features
atspi = ["dep:atspi"]
wl_clipboard = ["dep:wl-clipboard-rs"]
enigo = ["dep:enigo"]
xdg_kdotool = []

# Additional injector features
ydotool = []
mki = ["dep:mouse-keyboard-input"]
regex = ["dep:regex"]

# Combined features for convenience
all-backends = ["atspi", "wl_clipboard", "enigo", "xdg_kdotool"]
linux-desktop = ["atspi", "wl_clipboard", "xdg_kdotool"]