[package]
name = "coldvox-text-injection"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Text injection backends and session management for ColdVox"
license = "MIT OR Apache-2.0"
keywords = ["accessibility", "automation", "text-injection", "atspi", "clipboard"]
categories = ["accessibility", "gui"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
coldvox-stt = { path = "../coldvox-stt" }
zbus = { version = "5.11.0", optional = true }

# Backend dependencies (all optional)
atspi = { version = "0.28", optional = true }
wl-clipboard-rs = { version = "0.9", optional = true }
enigo = { version = "0.6", optional = true }
regex = { version = "1.10", optional = true }
# device_query = { version = "4.0", optional = true } # Removed: unused dependency

# Additional backend dependencies used by injectors
# Note: previously depended on x11/arboard/mouse-keyboard-input, but they are not used.

[dev-dependencies]
tempfile = "3.22"
mockall = "0.12"
tokio-test = "0.4"
rand = "0.8"
arboard = "3.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "3.0"

[features]
default = []

# Backend features
atspi = ["dep:atspi", "dep:zbus"]
wl_clipboard = ["dep:wl-clipboard-rs"]
enigo = ["dep:enigo"]
kdotool = []

# Additional injector features
ydotool = []
regex = ["dep:regex"]

# Combined features for convenience
all-backends = ["atspi", "wl_clipboard", "enigo", "kdotool"]
linux-desktop = ["atspi", "wl_clipboard", "kdotool"]

# Test features
live-hardware-tests = []
real-injection-tests = []

# Deprecated alias for xdg_kdotool. Will be removed in a future version.
xdg_kdotool = ["kdotool"]

[build-dependencies]
cc = "1.2"
pkg-config = "0.3"
