[package]
name = "coldvox-vad-silero"
version = "0.1.0"
edition = "2021"
description = "Silero ONNX-based Voice Activity Detection for ColdVox"
authors = ["ColdVox Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
coldvox-vad = { path = "../coldvox-vad" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
voice_activity_detector = { git = "https://github.com/nkeenan38/voice_activity_detector", rev = "234b7484860125014f06ad85da842da81b02e51a", optional = true }

[features]
default = []
silero = ["dep:voice_activity_detector"]
