[package]
name = "coldvox-vad-silero"
version = "0.1.0"
edition = "2021"
description = "Silero ONNX-based Voice Activity Detection for ColdVox"
authors = ["ColdVox Contributors"]
license = "MIT OR Apache-2.0"

[dependencies]
coldvox-vad = { path = "../coldvox-vad" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
voice_activity_detector = { version = "0.2.1", optional = true }

[features]
default = []
silero = ["dep:voice_activity_detector"]
