[package]
name = "coldvox-gui"
version = "0.1.0"
edition = "2021"
description = "Windows-first ColdVox overlay shell"
publish = false
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
